# fitness-bias-detector

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
scripts/: seed_knowledge.py
src/: config.py
src/api/: main.py
src/bias/: detector.py  prompts.py
src/llm/: client.py
src/rag/: embedder.py  knowledge_data.py  retriever.py  store.py
src/storage/: memory.py  profile_extractor.py  training_analyzer.py
